tests/errors/import_missing.orus
use tests::modules::not_there

fn main() {
}
